--- a/helm-charts/free5gc-stage-2/values.yaml
+++ b/helm-charts/free5gc-stage-2/values.yaml
@@ -37,7 +37,12 @@ smf:
   pfcp:
     addr: 192.168.2.7
   upf:
-    addr: 192.168.2.10
+    pfcp:
+      addr: 192.168.2.10
+    gtpu:
+      addr: 192.168.2.10
+  gnb:
+    addr: 192.168.2.11
 
 udm:
   http:
