--- a/helm-charts/free5gc-stage-2/charts/pcf/templates/configmap.yaml
+++ b/helm-charts/free5gc-stage-2/charts/pcf/templates/configmap.yaml
@@ -17,10 +17,12 @@ data:
       timeFormat: 2019-01-02 15:04:05
       defaultBdtRefId: BdtPolicyId-
       nrfUri: https://{{ .Values.global.nrf.addr }}:29510
-      serviceNameList:
-        - npcf-am-policy-control
-        - npcf-smpolicycontrol
-        - npcf-bdtpolicycontrol
-        - npcf-bdtpolicycontrol
-        - npcf-eventexposure
-        - npcf-ue-policy-control
+      serviceList:
+        - serviceName: npcf-am-policy-control
+        - serviceName: npcf-smpolicycontrol
+          suppFeat: 3fff
+        - serviceName: npcf-bdtpolicycontrol
+        - serviceName: npcf-policyauthorization
+          suppFeat: 3
+        - serviceName: npcf-eventexposure
+        - serviceName: npcf-ue-policy-control
