--- a/helm-charts/free5gc-stage-2/charts/webui/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/webui/templates/deployment.yaml
@@ -23,17 +23,17 @@ spec:
           image: {{ include "webui.image" . | quote }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/bash"]
-          args: ["-c", "cd webconsole && go run server.go --webuicfg webuicfg.conf"]
+          args: ["-c", "cd webconsole && go run server.go -webuicfg webuicfg.conf"]
           ports:
             - name: webui
               containerPort: {{ .Values.service.webui.port }}
               protocol: TCP
           volumeMounts:
             - name: free5gc-config
-              mountPath: /go/src/free5gc/config/free5GC.conf
+              mountPath: /root/gofree5gc/config/free5GC.conf
               subPath: free5GC.conf
             - name: webui-config
-              mountPath: /go/src/free5gc/webconsole/webuicfg.conf
+              mountPath: /root/gofree5gc/webconsole/webuicfg.conf
               subPath: webuicfg.conf
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
