--- a/helm-charts/free5gc-stage-2/charts/upf/templates/deployment.yaml
+++ b/helm-charts/free5gc-stage-2/charts/upf/templates/deployment.yaml
@@ -1,3 +1,71 @@
+{{- if .Values.global.enableSlices }}
+{{- range $i, $junk := until (.Values.global.numOfSlices|int) }}
+{{- with $ }}
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ include "upf.fullname" . }}-slice{{ add $i 1 }}
+  labels:
+    {{- include "upf.labels" . | nindent 4 }}
+    bans.io/slice: slice{{ add $i 1 }}
+  annotations:
+    "helm.sh/hook-weight": "-5"
+spec:
+  replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      {{- include "upf.selectorLabels" . | nindent 6 }}
+  template:
+    metadata:
+      labels:
+        {{- include "upf.selectorLabels" . | nindent 8 }}
+      annotations:
+        cni.projectcalico.org/ipAddrs: "[\"{{ printf "192.168.2.%d" (add (mul $i 2) 13) }}\"]"
+    spec:
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      containers:
+        - name: {{ .Chart.Name }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: {{ include "upf.image" . | quote }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command: ["/bin/bash"]
+          args: ["-c", "/root/setup.sh && cd src/upf/build && ./bin/free5gc-upfd"]
+          stdin: true
+          tty: true
+          volumeMounts:
+            - name: free5gc-config
+              mountPath: /root/gofree5gc/config/free5GC.conf
+              subPath: free5GC.conf
+            - name: upf-config
+              mountPath: /root/gofree5gc/src/upf/build/config/upfcfg.yaml
+              subPath: upfcfg.yaml
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+      volumes:
+        - name: free5gc-config
+          configMap:
+            name: free5gc-configmap
+        - name: upf-config
+          configMap:
+            name: upf-slice{{ add $i 1 }}-configmap
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+    {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+    {{- end }}
+    {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+    {{- end }}
+{{- end }}
+{{- end }}
+{{- else }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -58,3 +126,5 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+
+{{- end }}
