--- a/helm-charts/free5gc-stage-2/charts/nssf/templates/configmap.yaml
+++ b/helm-charts/free5gc-stage-2/charts/nssf/templates/configmap.yaml
@@ -26,21 +26,9 @@ data:
             mcc: 208
             mnc: 93
           supportedSnssaiList:
-            - sst: 1
-              sd: 010203
-            - sst: 1
-              sd: 112233
+            {{- include "nssf.snssaiList" . | indent 12 }}
       nsiList:
-        - snssai:
-            sst: 1
-            sd: 010203
-          nsiInformationList:
-            - nrfId: https://{{ .Values.global.nrf.addr }}:29510
-        - snssai:
-            sst: 1
-            sd: 112233
-          nsiInformationList:
-            - nrfId: https://{{ .Values.global.nrf.addr }}:29510
+        {{- include "nssf.nsiList" . | indent 8 }}
       taList:
         - tai:
             plmnId:
@@ -49,13 +37,4 @@ data:
             tac: 1
           accessType: 3GPP_ACCESS
           supportedSnssaiList:
-{{- if .Values.global.enableSlices }}
-{{- range $key, $val := .Values.global.slices }}
-{{- toYaml $val | nindent 12 }}
-{{- end }}
-{{- else }}
-            - sst: 1
-              sd: 010203
-            - sst: 1
-              sd: 112233
-{{- end }}
+            {{- include "nssf.snssaiList" . | indent 12 }}
